docs: sync all docs with Phase 4 + P1/P2 status
- README.md: LLM Proposal in workflow diagram, tests->1194
- architecture.md: 15 modules, LLM Proposal Layer
- demo-script.md: real LLM demo steps, runLlm=true
- future-roadmap.md: Phase 4 marked complete
- interview-qa.md: Q10/11/22 updated + Q34-36 added
- interview-walkthrough.md: module/test/LLM status updated
- llm-positioning.md: OpenAiCompatibleLlmClient, arch diagram
- resume-bullets.md: all 6 versions + 6 bullet variants synced
- step-v-output-report.md: tests->1194, Phase 4 Post-Validation

9 files, +583/-206